--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
-    "reselect": "^4.0.0"
+    "reselect": "^4.0.0",
+    "xlsx": "^0.16.9"
   },
   "build": {
     "files": [
