Update new API returns

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "electron_managementapp",
-  "version": "0.1.0",
+  "name": "HHA_Management",
+  "version": "1.0.0",
   "main": "public/Main.js",
   "homepage": "./",
   "private": true,
