--- a/package.json
+++ b/package.json
@@ -13,8 +13,6 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "clsx": "^1.1.1",
-    "highcharts": "^9.0.0",
-    "highcharts-react-official": "^3.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
@@ -22,8 +20,7 @@
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
-    "reselect": "^4.0.0",
-    "xlsx": "^0.16.9"
+    "reselect": "^4.0.0"
   },
   "build": {
     "win": {
